--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de atividades</title>
-    <!--<script defer type="application/javascript" src="canvas.js"></script>-->
+    <script defer type="application/javascript" src="grafos.js"></script>
     <script defer type="application/javascript" src="tarefa.js"></script>
     <script defer type="application/javascript" src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css">
@@ -55,11 +55,7 @@
                 </div>
             </fieldset>
         </div>
-
-        <div class="canvas-wrapper">
-            <fieldset>
-                <canvas></canvas>
-            </fieldset>
+        <div id="graph-container" style="margin: 1rem auto;">
         </div>
     </div>
 </body>
